# CMake_Practise

./: .gitignore  CMakeLists.txt  README.md  clean.sh
lib/: CMakeLists.txt  libsample.c  libsample.h
libnoprefix/: CMakeLists.txt  libnoprefix.c  libnoprefix.h
src/: CMakeLists.txt  main.c
